--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,8 @@
 tasks:
   - init: 'echo "TODO: Replace with init/build command"'
     command: 'echo "TODO: Replace with command to start project"'
+
+vscode:
+  extensions:
+    - octref.vetur@0.26.1:NrU4ZTLY6IF/1G6B/QLuIQ==
+    - esbenp.prettier-vscode@5.1.3:t532ajsImUSrA9N8Bd7jQw==
